# code-agent

./: .gitignore  README.md  eval_checkpoint.sh  pyproject.toml  run_swe_bench_eval.sh  run_swe_bench_phase1.sh  run_swe_bench_phase2.sh  train_gsm8k_grpo.sh  train_swe_bench_grpo.sh
evals/: __init__.py
evals/common/: __init__.py  grader.py  inference_worker.py  multi_turn.py  multi_turn_worker.py  prompt_builder.py  s3_storage.py  score_aggregator.py  verifier_set.py
evals/human_eval/: __init__.py  evaluation.py  execution.py  inference_worker.py  run_evaluation_worker.py  run_inference_worker.py
evals/human_eval/deploy/: job-evaluate-samples.yaml  job-generate-samples.yaml  pvc.yaml  (+1 more)
evals/swe_bench/: README.md  __init__.py  agent_config.py  agent_worker.py  build_prompt_dataset.py  grader.py  instance_runner.py  mirror_images.py  multi_turn_worker.py  patch_worker.py  prompt.py  run_patch_generation.py  run_test_execution.py  s3_storage.py  script_generator.py  test_worker.py
inference/deploy/: vllm-server-deployment.yaml
infra/deploy/: buildconfig-ray-swe-bench.yaml  buildconfig-ray-swe-rl-base.yaml  buildconfig-ray-swe-rl.yaml  minio.yaml  raycluster-swe-rl.yaml  raycluster.yaml
infra/images/: Containerfile.human-eval  Containerfile.ray-openrlhf  Containerfile.ray-swe-rl  Containerfile.ray-swe-rl-base  Containerfile.swe-bench-eval
training/gsm8k/: reward_func.py
training/swe_bench/: agent_func.py  agent_instance.py  build_dataset.py  convert_checkpoint_for_vllm.py  environment.py  system_prompt.py  tool_parser.py
verifiers/: ast_check.py  base.py
(+11 files in other folders)
