[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ray[default]>=2.48.0",
]

[project.optional-dependencies]
training = [
    "ray[default]>=2.48.0",
    "openrlhf[vllm]",
]
eval = [
    "ray[default]>=2.48.0",
    "swebench @ git+https://github.com/SWE-bench/SWE-bench.git@v4.1.0",
    "kubernetes>=28.0.0",
    "openai>=1.0.0",
    "datasets",
    "boto3",
    "mlflow>=2.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["evals*"]
